BugFix: OutlinePButton unwanted margin, data-aos messing with btn transition property,  navbar not collapsing on click

--- a/src/components/About/AboutMeDetails/AboutMeDetail/AboutMeDetail.css
+++ b/src/components/About/AboutMeDetails/AboutMeDetail/AboutMeDetail.css
@@ -7,3 +7,14 @@
   color: var(--secondary);
   font-size: 1rem !important;
 }
+
+.aboutme-social-buttons-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+@media (min-width: 576px) {
+  .aboutme-social-buttons-container {
+    width: 50%;
+  }
+}
